HttpCache: restore range: headers when handling cache stream 0 read failure

Bug: 891212
Change-Id: Ib4026c1e896ec188cab54c4e30c8ac2f8eb6b98f
Reviewed-on: https://chromium-review.googlesource.com/c/1305496
Reviewed-by: Asanka Herath <asanka@chromium.org>
Commit-Queue: Maks Orlovich <morlovich@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604774}
Former-commit-id: 6a1ba1817f033e651481ca3b6e02131ea0f30eac